# tac-2

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  VISION.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
docker/: README.md  bootstrap.sh  docker-compose.full.yaml  docker-compose.yaml  entrypoint.sh
docs/: README.md
gitbook/: README.md  SUMMARY.md
mintlify-docs/: docs.json
native/: Cargo.toml  README.md
native/crates/ast/: Cargo.toml
native/crates/ast/src/: ast.rs  lib.rs
native/crates/engine/: Cargo.toml
native/crates/engine/src/: ast.rs  git.rs  grep.rs  lib.rs  tac_parser.rs
native/crates/grep/: Cargo.toml
native/crates/grep/src/: lib.rs
native/npm/darwin-arm64/: package.json
native/npm/darwin-x64/: package.json
native/npm/linux-arm64-gnu/: package.json
native/npm/linux-x64-gnu/: package.json
native/npm/win32-x64-msvc/: package.json
native/scripts/: build.js
pkg/: package.json
scripts/: base64-scan.sh  build-web-if-stale.cjs  bump-version.mjs  check-coderabbit-themes.mjs  check-source-grep-tests.sh  compile-tests.mjs  copy-resources.cjs  dev-cli.js  dist-test-resolve.mjs  install-hooks.mjs  install-hooks.sh  install-pi-global.js  install.js  link-workspace-packages.cjs  parallel-monitor.mjs  postinstall.js  pr-risk-check.mjs  preview-dashboard.ts  recover-gsd-1364.ps1  recover-gsd-1364.sh  recover-gsd-1668.ps1  recover-gsd-1668.sh  require-tests.sh  rtk-benchmark.mjs  run-package-tests.cjs  secret-scan.mjs  secret-scan.sh  stage-web-standalone.cjs  sync-pkg-version.cjs  uninstall-pi-global.js  validate-pack.js  (+5 more)
(+1445 files in other folders)
